Add honeypot pages for common attack vectors

--- a/static/index.html
+++ b/static/index.html
@@ -246,16 +246,171 @@
 					<li>
 						<a href="/.htaccess" target="_blank"><code>/.htaccess</code></a> - Apache configuration
 					</li>
+					<li>
+						<a href="/yarn.lock" target="_blank"><code>/yarn.lock</code></a> - Yarn dependency lockfile
+					</li>
+					<li>
+						<a href="/composer.lock" target="_blank"><code>/composer.lock</code></a> - Composer dependency lockfile
+					</li>
+					<li>
+						<a href="/.dockerignore" target="_blank"><code>/.dockerignore</code></a> - Docker ignore patterns
+					</li>
+					<li>
+						<a href="/.gitignore" target="_blank"><code>/.gitignore</code></a> - Git ignore patterns
+					</li>
+					<li>
+						<a href="/web.config" target="_blank"><code>/web.config</code></a> - IIS configuration file
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">📊 API Documentation</h3>
+				<p>API specifications and documentation that reveal system architecture:</p>
+				<ul>
+					<li>
+						<a href="/swagger.json" target="_blank"><code>/swagger.json</code></a> - Swagger API documentation
+					</li>
+					<li>
+						<a href="/openapi.json" target="_blank"><code>/openapi.json</code></a> - OpenAPI specification
+					</li>
+					<li>
+						<a href="/api/v1/users" target="_blank"><code>/api/v1/users</code></a> - API endpoint documentation
+					</li>
+					<li>
+						<a href="/api/v2/admin" target="_blank"><code>/api/v2/admin</code></a> - Admin API endpoints
+					</li>
+					<li>
+						<a href="/graphql" target="_blank"><code>/graphql</code></a> - GraphQL endpoint
+					</li>
+					<li>
+						<a href="/api-docs/" target="_blank"><code>/api-docs/</code></a> - API documentation portal
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">📋 Log Files</h3>
+				<p>System logs that attackers search for sensitive information:</p>
+				<ul>
+					<li>
+						<a href="/error.log" target="_blank"><code>/error.log</code></a> - Application error log
+					</li>
+					<li>
+						<a href="/access.log" target="_blank"><code>/access.log</code></a> - Web server access log
+					</li>
+					<li>
+						<a href="/debug.log" target="_blank"><code>/debug.log</code></a> - Debug information log
+					</li>
+					<li>
+						<a href="/application.log" target="_blank"><code>/application.log</code></a> - Application activity log
+					</li>
+					<li>
+						<a href="/system.trace" target="_blank"><code>/system.trace</code></a> - System trace file
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">🗜️ Archive Files</h3>
+				<p>Compressed files that appear to contain sensitive backups:</p>
+				<ul>
+					<li>
+						<a href="/backup.zip" target="_blank"><code>/backup.zip</code></a> - ZIP archive with realistic header
+					</li>
+					<li>
+						<a href="/database.tar.gz" target="_blank"><code>/database.tar.gz</code></a> - Compressed database backup
+					</li>
+					<li>
+						<a href="/source.rar" target="_blank"><code>/source.rar</code></a> - RAR archive with source code
+					</li>
+					<li>
+						<a href="/files.7z" target="_blank"><code>/files.7z</code></a> - 7-Zip compressed archive
+					</li>
+					<li>
+						<a href="/export.tar" target="_blank"><code>/export.tar</code></a> - TAR archive file
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">☁️ Cloud & DevOps</h3>
+				<p>Cloud configuration and deployment files:</p>
+				<ul>
+					<li>
+						<a href="/Dockerfile" target="_blank"><code>/Dockerfile</code></a> - Docker container configuration
+					</li>
+					<li>
+						<a href="/docker-compose.yml" target="_blank"><code>/docker-compose.yml</code></a> - Docker Compose setup
+					</li>
+					<li>
+						<a href="/kubernetes.yaml" target="_blank"><code>/kubernetes.yaml</code></a> - Kubernetes deployment
+					</li>
+					<li>
+						<a href="/.aws/config" target="_blank"><code>/.aws/config</code></a> - AWS configuration file
+					</li>
+					<li>
+						<a href="/serverless.yml" target="_blank"><code>/serverless.yml</code></a> - Serverless framework config
+					</li>
+					<li>
+						<a href="/.github/workflows/deploy.yml" target="_blank"><code>/.github/workflows/deploy.yml</code></a> - GitHub
+						Actions workflow
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">🔍 Server Information</h3>
+				<p>Server information and status pages:</p>
+				<ul>
+					<li>
+						<a href="/phpinfo.php" target="_blank"><code>/phpinfo.php</code></a> - PHP configuration info
+					</li>
+					<li>
+						<a href="/info.php" target="_blank"><code>/info.php</code></a> - Server information page
+					</li>
+					<li>
+						<a href="/test.php" target="_blank"><code>/test.php</code></a> - Test script
+					</li>
+					<li>
+						<a href="/robots.txt" target="_blank"><code>/robots.txt</code></a> - Web crawler instructions
+					</li>
+					<li>
+						<a href="/.well-known/security.txt" target="_blank"><code>/.well-known/security.txt</code></a> - Security contact
+						info
+					</li>
+				</ul>
+
+				<h3 style="color: #e74c3c">🎯 Additional Attack Vectors</h3>
+				<p>Other common targets that attackers frequently probe:</p>
+				<ul>
+					<li>
+						<a href="/admin.php" target="_blank"><code>/admin.php</code></a> - Admin script
+					</li>
+					<li>
+						<a href="/login.php" target="_blank"><code>/login.php</code></a> - Login script
+					</li>
+					<li>
+						<a href="/manage/" target="_blank"><code>/manage/</code></a> - Management interface
+					</li>
+					<li>
+						<a href="/control/" target="_blank"><code>/control/</code></a> - Control panel
+					</li>
+					<li>
+						<a href="/panel/" target="_blank"><code>/panel/</code></a> - Admin panel
+					</li>
+					<li>
+						<a href="/wp-login.php" target="_blank"><code>/wp-login.php</code></a> - WordPress login
+					</li>
+					<li>
+						<a href="/settings.php" target="_blank"><code>/settings.php</code></a> - Settings configuration
+					</li>
+					<li>
+						<a href="/database.php" target="_blank"><code>/database.php</code></a> - Database configuration
+					</li>
 				</ul>
 			</div>
 
 			<div style="background: #fff3cd; border: 1px solid #ffeaa7; padding: 15px; border-radius: 4px; margin: 20px 0">
 				<strong>💡 What You'll See:</strong> Each link above will show you realistic fake content that includes:
 				<ul style="margin: 10px 0">
-					<li>Convincing file formats and structures</li>
-					<li>Realistic fake data (usernames, passwords, API keys, etc.)</li>
-					<li>Proper MIME types and headers</li>
-					<li>Random variations to avoid detection patterns</li>
+					<li><strong>Authentic file formats:</strong> Proper JSON, YAML, SQL, and binary structures</li>
+					<li><strong>Realistic fake data:</strong> Usernames, passwords, API keys, database schemas</li>
+					<li><strong>Proper MIME types:</strong> Correct content-type headers for each file type</li>
+					<li><strong>Dynamic variations:</strong> Content changes on each request to avoid detection</li>
+					<li><strong>Real archive headers:</strong> ZIP, RAR, TAR files with authentic signatures</li>
+					<li><strong>Convincing API specs:</strong> Auto-generated OpenAPI documentation with multiple endpoints</li>
+					<li><strong>Authentic log formats:</strong> Realistic timestamps, IP addresses, and error messages</li>
 				</ul>
 				<strong>Note:</strong> All data is completely fake and generated dynamically. No real secrets are exposed!
 			</div>
@@ -277,14 +432,27 @@
 			</div>
 
 			<div style="background: #f0f8ff; border: 1px solid #2196f3; padding: 15px; border-radius: 4px; margin: 20px 0">
-				<strong>🎮 Interactive Challenge:</strong>
+				<strong>🎮 Interactive Challenges:</strong>
 				<p style="margin: 10px 0">
-					Try accessing the same URL multiple times - you'll notice the content changes slightly each time! This variation helps
-					avoid detection by automated tools and makes the honeypot more convincing.
+					<strong>1. Dynamic Content:</strong> Try accessing the same URL multiple times - you'll notice the content changes
+					slightly each time! This variation helps avoid detection by automated tools.
 				</p>
 				<p style="margin: 10px 0">
-					<strong>Example:</strong> Visit <a href="/.git/config" target="_blank">/.git/config</a> several times and compare the
-					generated repository names, user emails, and commit hashes.
+					<strong>2. Archive Headers:</strong> Try downloading <a href="/backup.zip" target="_blank">backup.zip</a> or
+					<a href="/source.rar" target="_blank">source.rar</a> - they have real file signatures but contain random data instead of
+					actual files.
+				</p>
+				<p style="margin: 10px 0">
+					<strong>3. API Documentation:</strong> Check <a href="/swagger.json" target="_blank">swagger.json</a> multiple times -
+					the API endpoints, schemas, and descriptions are auto-generated differently each time.
+				</p>
+				<p style="margin: 10px 0">
+					<strong>4. Log Analysis:</strong> Compare <a href="/error.log" target="_blank">error.log</a> vs
+					<a href="/access.log" target="_blank">access.log</a> - different log formats with realistic timestamps and IP addresses.
+				</p>
+				<p style="margin: 10px 0">
+					<strong>5. Git Repository:</strong> Visit <a href="/.git/config" target="_blank">/.git/config</a> several times and
+					compare the generated repository names, user emails, and commit hashes.
 				</p>
 			</div>
 
